# utas

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  linux-release.yml  mac-release.yml  push.yml  win-release.yml
crates/file/: Cargo.toml
crates/file/src/: file.rs  lib.rs
src/: android_gen.rs  file.rs  ios_gen.rs  main.rs  parse.rs
tests/: file.rs  test.rs
tests/cases/android/case1/output/values-ar/: src1.xml  strings.xml
tests/cases/android/case1/output/values-en/: src1.xml  strings.xml
tests/cases/android/case1/output/values-fi/: src1.xml  strings.xml
tests/cases/android/case1/output/values-fr/: src1.xml  strings.xml
tests/cases/android/case10/input/: src1.txt
tests/cases/android/case10/output/values-ru/: src1.xml
tests/cases/android/case11/output/values-en/: src1.xml
tests/cases/android/case12/input/: src1.txt
tests/cases/android/case12/output/values-en/: src1.xml
tests/cases/android/case12/output/values-ru/: src1.xml
tests/cases/android/case13/input/: src1.txt
tests/cases/android/case13/output/values-en/: src1.xml
tests/cases/android/case13/output/values-en-rGB/: src1.xml
tests/cases/android/case14/input/: src1.txt
tests/cases/android/case2/input/: src1.txt
tests/cases/android/case4/input/: src1.txt
tests/cases/android/case5/input/: src1.txt
tests/cases/android/case6/input/: src1.txt  src2.txt
tests/cases/android/case7/input/: src1.txt
tests/cases/android/case8/input/: src1.txt
tests/cases/android/case9/input/: src1.txt
tests/cases/android/input1/: case1.txt
tests/cases/android/output1/values-ru/: strings.xml
(+44 files in other folders)
